InSCAPE/OSGeo4W/apps/grass/grass-6.4.2RC2/include/grass/gisdefs.h


/*============================= Include Files ==============================*/

/* none */

/*=========================== Constants/Defines ============================*/

/* none (look in gis.h) */

/*=========================== Typedefs/Structures ==========================*/

/* none (look in gis.h) */

/*============================== Prototypes ================================*/

/* adj_cellhd.c */
char *G_adjust_Cell_head(struct Cell_head *, int, int);

char *G_adjust_Cell_head3(struct Cell_head *, int, int, int);


/* align_window.c */
char *G_align_window(struct Cell_head *, const struct Cell_head *);


/* alloc.c */
void *G__malloc(const char *, int, size_t);

void *G__calloc(const char *, int, size_t, size_t);

void *G__realloc(const char *, int, void *, size_t);

void G_free(void *);

/* alloc_cell.c */
size_t G_raster_size(RASTER_MAP_TYPE);

CELL *G_allocate_cell_buf(void);

void *G_allocate_raster_buf(RASTER_MAP_TYPE);

CELL *G_allocate_c_raster_buf(void);

FCELL *G_allocate_f_raster_buf(void);

DCELL *G_allocate_d_raster_buf(void);

char *G_allocate_null_buf(void);

unsigned char *G__allocate_null_bits(int);

int G__null_bitstream_size(int);


/* area.c */
int G_begin_cell_area_calculations(void);

double G_area_of_cell_at_row(int);

int G_begin_polygon_area_calculations(void);

double G_area_of_polygon(const double *, const double *, int);


/* area_ellipse.c */
int G_begin_zone_area_on_ellipsoid(double, double, double);

double G_darea0_on_ellipsoid(double);

double G_area_for_zone_on_ellipsoid(double, double);