OSGeo4W/apps/grass/grass-6.4.2RC2/etc/python/grass/lib/gis.py


struct_G_3dview.__slots__ = [
    'pgm_id',
    'from_to',
    'fov',
    'twist',
    'exag',
    'mesh_freq',
    'poly_freq',
    'display_type',
    'lightson',
    'dozero',
    'colorgrid',
    'shading',
    'fringe',
    'surfonly',
    'doavg',
    'grid_col',
    'bg_col',
    'other_col',
    'lightpos',
    'lightcol',
    'ambient',
    'shine',
    'vwin',
]
struct_G_3dview._fields_ = [
    ('pgm_id', c_char * 40),
    ('from_to', (c_float * 3) * 2),
    ('fov', c_float),
    ('twist', c_float),
    ('exag', c_float),
    ('mesh_freq', c_int),
    ('poly_freq', c_int),
    ('display_type', c_int),
    ('lightson', c_int),
    ('dozero', c_int),
    ('colorgrid', c_int),
    ('shading', c_int),
    ('fringe', c_int),
    ('surfonly', c_int),
    ('doavg', c_int),
    ('grid_col', c_char * 40),
    ('bg_col', c_char * 40),
    ('other_col', c_char * 40),
    ('lightpos', c_float * 4),
    ('lightcol', c_float * 3),
    ('ambient', c_float),
    ('shine', c_float),
    ('vwin', struct_Cell_head),
]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\gis.h: 583
class struct_Key_Value(Structure):
    pass

struct_Key_Value.__slots__ = [
    'nitems',
    'nalloc',
    'key',
    'value',
]
struct_Key_Value._fields_ = [
    ('nitems', c_int),
    ('nalloc', c_int),
    ('key', POINTER(POINTER(c_char))),
    ('value', POINTER(POINTER(c_char))),
]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\gis.h: 591
class struct_Option(Structure):
    pass

struct_Option.__slots__ = [
    'key',
    'type',
    'required',
    'multiple',
    'options',
    'opts',
    'key_desc',
    'label',
    'description',
    'descriptions',
    'descs',
    'answer',
    '_def',
    'answers',
    'next_opt',
    'gisprompt',
    'guisection',
    'checker',
    'count',
]
struct_Option._fields_ = [
    ('key', String),
    ('type', c_int),
    ('required', c_int),
    ('multiple', c_int),
    ('options', String),
    ('opts', POINTER(POINTER(c_char))),
    ('key_desc', String),
    ('label', String),
    ('description', String),
    ('descriptions', String),
    ('descs', POINTER(POINTER(c_char))),
    ('answer', String),
    ('_def', String),
    ('answers', POINTER(POINTER(c_char))),
    ('next_opt', POINTER(struct_Option)),
    ('gisprompt', String),
    ('guisection', String),
    ('checker', CFUNCTYPE(UNCHECKED(c_int), )),
    ('count', c_int),
]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\gis.h: 619
class struct_Flag(Structure):
    pass

struct_Flag.__slots__ = [
    'key',
    'answer',
    'label',
    'description',
    'guisection',
    'next_flag',
]
struct_Flag._fields_ = [
    ('key', c_char),
    ('answer', c_char),
    ('label', String),
    ('description', String),
    ('guisection', String),
    ('next_flag', POINTER(struct_Flag)),
]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\gis.h: 629
class struct_GModule(Structure):
    pass

struct_GModule.__slots__ = [
    'label',
    'description',
    'keywords',
    'overwrite',
    'verbose',
]
struct_GModule._fields_ = [
    ('label', String),
    ('description', String),
    ('keywords', String),
    ('overwrite', c_int),
    ('verbose', c_int),
]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\gis.h: 639
class struct_TimeStamp(Structure):
    pass

struct_TimeStamp.__slots__ = [
    'dt',
    'count',
]
struct_TimeStamp._fields_ = [
    ('dt', DateTime * 2),
    ('count', c_int),
]

# c:\\osgeo4w\\usr\\src\\release_20111115_grass_6_4_2RC2\\dist.i686-pc-mingw32\\include\\grass\\gis.h: 645
class struct_GDAL_link(Structure):
    pass

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 35
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_adjust_Cell_head'):
    G_adjust_Cell_head = _libs['grass_gis.6.4.2RC2'].G_adjust_Cell_head
    G_adjust_Cell_head.restype = ReturnString
    G_adjust_Cell_head.argtypes = [POINTER(struct_Cell_head), c_int, c_int]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 36
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_adjust_Cell_head3'):
    G_adjust_Cell_head3 = _libs['grass_gis.6.4.2RC2'].G_adjust_Cell_head3
    G_adjust_Cell_head3.restype = ReturnString
    G_adjust_Cell_head3.argtypes = [POINTER(struct_Cell_head), c_int, c_int, c_int]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 39
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_align_window'):
    G_align_window = _libs['grass_gis.6.4.2RC2'].G_align_window
    G_align_window.restype = ReturnString
    G_align_window.argtypes = [POINTER(struct_Cell_head), POINTER(struct_Cell_head)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 42
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G__malloc'):
    G__malloc = _libs['grass_gis.6.4.2RC2'].G__malloc
    G__malloc.restype = POINTER(None)
    G__malloc.argtypes = [String, c_int, c_size_t]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 43
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G__calloc'):
    G__calloc = _libs['grass_gis.6.4.2RC2'].G__calloc
    G__calloc.restype = POINTER(None)
    G__calloc.argtypes = [String, c_int, c_size_t, c_size_t]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 44
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G__realloc'):
    G__realloc = _libs['grass_gis.6.4.2RC2'].G__realloc
    G__realloc.restype = POINTER(None)
    G__realloc.argtypes = [String, c_int, POINTER(None), c_size_t]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 45
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_free'):
    G_free = _libs['grass_gis.6.4.2RC2'].G_free
    G_free.restype = None
    G_free.argtypes = [POINTER(None)]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 52
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_raster_size'):
    G_raster_size = _libs['grass_gis.6.4.2RC2'].G_raster_size
    G_raster_size.restype = c_size_t
    G_raster_size.argtypes = [RASTER_MAP_TYPE]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 53
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_allocate_cell_buf'):
    G_allocate_cell_buf = _libs['grass_gis.6.4.2RC2'].G_allocate_cell_buf
    G_allocate_cell_buf.restype = POINTER(CELL)
    G_allocate_cell_buf.argtypes = []

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 54
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_allocate_raster_buf'):
    G_allocate_raster_buf = _libs['grass_gis.6.4.2RC2'].G_allocate_raster_buf
    G_allocate_raster_buf.restype = POINTER(None)
    G_allocate_raster_buf.argtypes = [RASTER_MAP_TYPE]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 55
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_allocate_c_raster_buf'):
    G_allocate_c_raster_buf = _libs['grass_gis.6.4.2RC2'].G_allocate_c_raster_buf
    G_allocate_c_raster_buf.restype = POINTER(CELL)
    G_allocate_c_raster_buf.argtypes = []

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 56
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_allocate_f_raster_buf'):
    G_allocate_f_raster_buf = _libs['grass_gis.6.4.2RC2'].G_allocate_f_raster_buf
    G_allocate_f_raster_buf.restype = POINTER(FCELL)
    G_allocate_f_raster_buf.argtypes = []

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 57
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_allocate_d_raster_buf'):
    G_allocate_d_raster_buf = _libs['grass_gis.6.4.2RC2'].G_allocate_d_raster_buf
    G_allocate_d_raster_buf.restype = POINTER(DCELL)
    G_allocate_d_raster_buf.argtypes = []

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 58
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_allocate_null_buf'):
    G_allocate_null_buf = _libs['grass_gis.6.4.2RC2'].G_allocate_null_buf
    G_allocate_null_buf.restype = ReturnString
    G_allocate_null_buf.argtypes = []

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 59
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G__allocate_null_bits'):
    G__allocate_null_bits = _libs['grass_gis.6.4.2RC2'].G__allocate_null_bits
    G__allocate_null_bits.restype = POINTER(c_ubyte)
    G__allocate_null_bits.argtypes = [c_int]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 60
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G__null_bitstream_size'):
    G__null_bitstream_size = _libs['grass_gis.6.4.2RC2'].G__null_bitstream_size
    G__null_bitstream_size.restype = c_int
    G__null_bitstream_size.argtypes = [c_int]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 63
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_begin_cell_area_calculations'):
    G_begin_cell_area_calculations = _libs['grass_gis.6.4.2RC2'].G_begin_cell_area_calculations
    G_begin_cell_area_calculations.restype = c_int
    G_begin_cell_area_calculations.argtypes = []

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 64
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_area_of_cell_at_row'):
    G_area_of_cell_at_row = _libs['grass_gis.6.4.2RC2'].G_area_of_cell_at_row
    G_area_of_cell_at_row.restype = c_double
    G_area_of_cell_at_row.argtypes = [c_int]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 65
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_begin_polygon_area_calculations'):
    G_begin_polygon_area_calculations = _libs['grass_gis.6.4.2RC2'].G_begin_polygon_area_calculations
    G_begin_polygon_area_calculations.restype = c_int
    G_begin_polygon_area_calculations.argtypes = []

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 66
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_area_of_polygon'):
    G_area_of_polygon = _libs['grass_gis.6.4.2RC2'].G_area_of_polygon
    G_area_of_polygon.restype = c_double
    G_area_of_polygon.argtypes = [POINTER(c_double), POINTER(c_double), c_int]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 69
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_begin_zone_area_on_ellipsoid'):
    G_begin_zone_area_on_ellipsoid = _libs['grass_gis.6.4.2RC2'].G_begin_zone_area_on_ellipsoid
    G_begin_zone_area_on_ellipsoid.restype = c_int
    G_begin_zone_area_on_ellipsoid.argtypes = [c_double, c_double, c_double]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 70
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_darea0_on_ellipsoid'):
    G_darea0_on_ellipsoid = _libs['grass_gis.6.4.2RC2'].G_darea0_on_ellipsoid
    G_darea0_on_ellipsoid.restype = c_double
    G_darea0_on_ellipsoid.argtypes = [c_double]

# c:/osgeo4w/usr/src/release_20111115_grass_6_4_2RC2/dist.i686-pc-mingw32/include/grass/gisdefs.h: 71
if hasattr(_libs['grass_gis.6.4.2RC2'], 'G_area_for_zone_on_ellipsoid'):
    G_area_for_zone_on_ellipsoid = _libs['grass_gis.6.4.2RC2'].G_area_for_zone_on_ellipsoid
    G_area_for_zone_on_ellipsoid.restype = c_double
    G_area_for_zone_on_ellipsoid.argtypes = [c_double, c_double]
